--- a/old-descktop-app/package.json
+++ b/old-descktop-app/package.json
@@ -5,6 +5,7 @@
   "description": "My Electron application description",
   "main": ".webpack/main",
   "scripts": {
+    "build": "webpack --watch",
     "start": "electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make",
@@ -98,7 +99,6 @@
     "electron-squirrel-startup": "^1.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-hot-loader": "^4.13.0",
     "react-router-dom": "^5.2.0",
     "sudo-prompt": "^9.2.1"
   }
