--- a/desktop-app/package.json
+++ b/desktop-app/package.json
@@ -92,10 +92,12 @@
     "webpack": "^4.46.0"
   },
   "dependencies": {
+    "@mapbox/node-pre-gyp": "^1.0.5",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
     "electron-squirrel-startup": "^1.0.0",
+    "nodegit": "^0.27.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hot-loader": "^4.13.0",
