--- a/desktop-app/package.json
+++ b/desktop-app/package.json
@@ -82,6 +82,7 @@
     "babel-loader": "^8.2.2",
     "css-loader": "^4.2.1",
     "electron": "12.0.5",
+    "electron-rebuild": "^2.3.5",
     "eslint": "^7.6.0",
     "eslint-plugin-import": "^2.20.0",
     "fork-ts-checker-webpack-plugin": "^5.0.14",
