--- a/desktop-app/package.json
+++ b/desktop-app/package.json
@@ -101,6 +101,7 @@
     "electron-squirrel-startup": "^1.0.0",
     "nodegit": "^0.27.0",
     "react": "^17.0.2",
+    "react-diff-viewer": "^3.1.1",
     "react-dom": "^17.0.2",
     "react-hot-loader": "^4.13.0",
     "react-router-dom": "^5.2.0",
