--- a/desktop-app/package.json
+++ b/desktop-app/package.json
@@ -93,10 +93,14 @@
     "webpack": "^4.46.0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
     "@mapbox/node-pre-gyp": "^1.0.5",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
+    "@mui/icons-material": "^5.1.1",
     "electron-squirrel-startup": "^1.0.0",
     "react": "^17.0.2",
     "react-diff-viewer": "^3.1.1",
