--- a/desktop-app/package.json
+++ b/desktop-app/package.json
@@ -107,6 +107,7 @@
     "react-dom": "^17.0.2",
     "react-hot-loader": "^4.13.0",
     "react-router-dom": "^5.2.0",
+    "reactjs-popup": "^2.0.5",
     "simple-git": "^2.39.0",
     "sudo-prompt": "^9.2.1"
   }
