--- a/desktop-app/package.json
+++ b/desktop-app/package.json
@@ -103,6 +103,7 @@
     "@mui/icons-material": "^5.1.1",
     "electron-json-storage": "^4.5.0",
     "electron-squirrel-startup": "^1.0.0",
+    "file-loader": "^6.2.0",
     "react": "^17.0.2",
     "react-diff-viewer": "^3.1.1",
     "react-dom": "^17.0.2",
