--- a/desktop-app/package.json
+++ b/desktop-app/package.json
@@ -101,12 +101,14 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
     "@mui/icons-material": "^5.1.1",
+    "ace-builds": "^1.4.13",
     "debug": "^4.3.2",
     "dialog": "^0.3.1",
     "electron-json-storage": "^4.5.0",
     "electron-squirrel-startup": "^1.0.0",
     "file-loader": "^6.2.0",
     "react": "^17.0.2",
+    "react-ace": "^9.5.0",
     "react-diff-viewer": "^3.1.1",
     "react-dom": "^17.0.2",
     "react-hot-loader": "^4.13.0",
