--- a/desktop-app/package.json
+++ b/desktop-app/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "my-new-app",
-  "productName": "my-new-app",
+  "name": "bridge",
+  "productName": "bridge",
   "version": "1.0.0",
   "description": "My Electron application description",
   "main": ".webpack/main",
@@ -82,7 +82,7 @@
     "babel-loader": "^8.2.2",
     "css-loader": "^4.2.1",
     "electron": "12.0.5",
-    "electron-rebuild": "^2.3.5",
+    "electron-rebuild": "^3.2.5",
     "eslint": "^7.6.0",
     "eslint-plugin-import": "^2.20.0",
     "fork-ts-checker-webpack-plugin": "^5.0.14",
@@ -107,6 +107,8 @@
     "electron-json-storage": "^4.5.0",
     "electron-squirrel-startup": "^1.0.0",
     "file-loader": "^6.2.0",
+    "node-gyp": "^8.4.1",
+    "node-pty": "^0.10.1",
     "react": "^17.0.2",
     "react-ace": "^9.5.0",
     "react-diff-viewer": "^3.1.1",
