--- a/bridge/package.json
+++ b/bridge/package.json
@@ -69,12 +69,12 @@
     "@electron-forge/maker-squirrel": "^6.0.0-beta.61",
     "@electron-forge/maker-zip": "^6.0.0-beta.61",
     "@electron-forge/plugin-webpack": "6.0.0-beta.61",
-    "@typescript-eslint/eslint-plugin": "^4.0.1",
-    "@typescript-eslint/parser": "^4.0.1",
-    "@vercel/webpack-asset-relocator-loader": "1.7.0",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.3",
     "@types/react-router-dom": "^5.1.7",
+    "@typescript-eslint/eslint-plugin": "^4.0.1",
+    "@typescript-eslint/parser": "^4.0.1",
+    "@vercel/webpack-asset-relocator-loader": "1.7.0",
     "css-loader": "^6.0.0",
     "electron": "16.0.4",
     "eslint": "^7.6.0",
@@ -86,9 +86,26 @@
     "typescript": "^4.0.2"
   },
   "dependencies": {
+    "@emotion/react": "^11.7.0",
+    "@emotion/styled": "^11.6.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@mui/material": "^5.2.3",
+    "ace-builds": "^1.4.13",
+    "electron-json-storage": "^4.5.0",
     "electron-squirrel-startup": "^1.0.0",
+    "file-loader": "^6.2.0",
+    "node-pty": "^0.10.1",
     "react": "^17.0.2",
+    "react-ace": "^9.5.0",
+    "react-diff-viewer": "^3.1.1",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "react-switch": "^6.0.0",
+    "reactjs-popup": "^2.0.5",
+    "simple-git": "^2.39.0"
   }
 }
