seems like most errorw with webpack gone away

--- a/bridge/package.json
+++ b/bridge/package.json
@@ -98,7 +98,9 @@
     "electron-json-storage": "^4.5.0",
     "electron-squirrel-startup": "^1.0.0",
     "file-loader": "^6.2.0",
+    "node-polyfill-webpack-plugin": "^1.1.4",
     "node-pty": "^0.10.1",
+    "path-browserify": "^1.0.1",
     "react": "^17.0.2",
     "react-ace": "^9.5.0",
     "react-diff-viewer": "^3.1.1",
