--- a/bridge/tsconfig.json
+++ b/bridge/tsconfig.json
@@ -5,7 +5,7 @@
     "jsx":"react-jsx",
     "skipLibCheck": true,
     "esModuleInterop": true,
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "sourceMap": true,
     "baseUrl": ".",
     "outDir": "dist",
