--- a/bridge/package.json
+++ b/bridge/package.json
@@ -111,6 +111,7 @@
     "react-router-dom": "^5.2.0",
     "react-switch": "^6.0.0",
     "reactjs-popup": "^2.0.5",
-    "simple-git": "^2.39.0"
+    "simple-git": "^2.39.0",
+    "xterm": "^4.15.0"
   }
 }
