--- a/bridge/package.json
+++ b/bridge/package.json
@@ -112,6 +112,7 @@
     "react-switch": "^6.0.0",
     "reactjs-popup": "^2.0.5",
     "simple-git": "^2.39.0",
-    "xterm": "^4.15.0"
+    "xterm": "^4.15.0",
+    "xterm-addon-fit": "^0.5.0"
   }
 }
