--- a/bridge/package.json
+++ b/bridge/package.json
@@ -108,10 +108,12 @@
     "react-ace": "^9.5.0",
     "react-diff-viewer": "^3.1.1",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^5.2.0",
     "react-switch": "^6.0.0",
     "reactjs-popup": "^2.0.5",
     "simple-git": "^2.39.0",
+    "styled-components": "^5.3.3",
     "xterm": "^4.15.0",
     "xterm-addon-fit": "^0.5.0"
   }
