--- a/bridge/package.json
+++ b/bridge/package.json
@@ -98,12 +98,15 @@
     "@material-ui/icons": "^4.11.2",
     "@mui/material": "^5.2.3",
     "ace-builds": "^1.4.13",
+    "autoprefixer": "^10.4.0",
     "electron-json-storage": "^4.5.0",
     "electron-squirrel-startup": "^1.0.0",
     "file-loader": "^6.2.0",
     "node-polyfill-webpack-plugin": "^1.1.4",
     "node-pty": "^0.10.1",
     "path-browserify": "^1.0.1",
+    "postcss": "^8.4.5",
+    "postcss-loader": "^6.2.1",
     "react": "^17.0.2",
     "react-ace": "^9.5.0",
     "react-diff-viewer": "^3.1.1",
@@ -114,6 +117,7 @@
     "reactjs-popup": "^2.0.5",
     "simple-git": "^2.39.0",
     "styled-components": "^5.3.3",
+    "tailwindcss": "^3.0.7",
     "xterm": "^4.15.0",
     "xterm-addon-fit": "^0.5.0"
   }
