--- a/bridge/package.json
+++ b/bridge/package.json
@@ -112,6 +112,7 @@
     "react-diff-viewer": "^3.1.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-resize-detector": "^6.7.7",
     "react-router-dom": "^5.2.0",
     "react-switch": "^6.0.0",
     "reactjs-popup": "^2.0.5",
