--- a/bridge/package.json
+++ b/bridge/package.json
@@ -101,6 +101,7 @@
     "autoprefixer": "^10.4.0",
     "electron-json-storage": "^4.5.0",
     "electron-squirrel-startup": "^1.0.0",
+    "electron-store": "^8.0.1",
     "file-loader": "^6.2.0",
     "node-polyfill-webpack-plugin": "^1.1.4",
     "node-pty": "^0.10.1",
