--- a/bridge/package.json
+++ b/bridge/package.json
@@ -99,6 +99,7 @@
     "@mui/material": "^5.2.3",
     "ace-builds": "^1.4.13",
     "autoprefixer": "^10.4.0",
+    "electron-context-menu": "^3.1.2",
     "electron-json-storage": "^4.5.0",
     "electron-squirrel-startup": "^1.0.0",
     "electron-store": "^8.0.1",
