--- a/bridge/package.json
+++ b/bridge/package.json
@@ -20,6 +20,21 @@
   "config": {
     "forge": {
       "packagerConfig": {},
+      "publishers": [
+        {
+          "name": "@electron-forge/publisher-github",
+          "platforms": [
+            "win32"
+          ],
+          "config": {
+            "repository": {
+              "owner": "SergeyKalutsky",
+              "name": "bridge"
+            },
+            "prerelease": true
+          }
+        }
+      ],
       "makers": [
         {
           "name": "@electron-forge/maker-squirrel",
@@ -66,6 +81,7 @@
     }
   },
   "devDependencies": {
+    "@electron-forge/publisher-github": "^6.0.0-beta.52",
     "@electron-forge/cli": "^6.0.0-beta.61",
     "@electron-forge/maker-deb": "^6.0.0-beta.61",
     "@electron-forge/maker-rpm": "^6.0.0-beta.61",
