--- a/bridge/package.json
+++ b/bridge/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bridge",
   "productName": "bridge",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "My Electron application description",
   "main": ".webpack/main",
   "scripts": {
@@ -26,12 +26,13 @@
           "platforms": [
             "win32"
           ],
+          "authToken": "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",
           "config": {
             "repository": {
               "owner": "SergeyKalutsky",
               "name": "bridge"
             },
-            "prerelease": true
+            "prerelease": false
           }
         }
       ],
@@ -81,13 +82,13 @@
     }
   },
   "devDependencies": {
-    "@electron-forge/publisher-github": "^6.0.0-beta.52",
     "@electron-forge/cli": "^6.0.0-beta.61",
     "@electron-forge/maker-deb": "^6.0.0-beta.61",
     "@electron-forge/maker-rpm": "^6.0.0-beta.61",
     "@electron-forge/maker-squirrel": "^6.0.0-beta.61",
     "@electron-forge/maker-zip": "^6.0.0-beta.61",
     "@electron-forge/plugin-webpack": "6.0.0-beta.61",
+    "@electron-forge/publisher-github": "^6.0.0-beta.52",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.3",
     "@types/react-router-dom": "^5.1.7",
