--- a/bridge/.gitignore
+++ b/bridge/.gitignore
@@ -5,6 +5,8 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
+recordings
+screenshots
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
@@ -87,3 +89,6 @@ typings/
 
 # Electron-Forge
 out/
+/test-results/
+/playwright-report/
+/playwright/.cache/
