--- a/bridge/package.json
+++ b/bridge/package.json
@@ -89,6 +89,7 @@
     "@electron-forge/maker-zip": "^6.0.0-beta.61",
     "@electron-forge/plugin-webpack": "6.0.0-beta.61",
     "@electron-forge/publisher-github": "^6.0.0-beta.52",
+    "@playwright/test": "^1.27.1",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.3",
     "@types/react-router-dom": "^5.1.7",
@@ -121,6 +122,7 @@
     "electron-squirrel-startup": "^1.0.0",
     "electron-store": "^8.0.1",
     "file-loader": "^6.2.0",
+    "loglevel": "^1.8.1",
     "ncp": "^2.0.0",
     "node-polyfill-webpack-plugin": "^1.1.4",
     "node-pty": "^0.10.1",
