changed mocha command to run all tests in src

--- a/bridge/package.json
+++ b/bridge/package.json
@@ -10,7 +10,7 @@
     "make": "electron-forge make",
     "publish": "electron-forge publish",
     "lint": "eslint --ext .ts,.tsx .",
-    "test": "mocha --require ts-node/register tests/mocha.spec.ts"
+    "test": "mocha --require ts-node/register src/**/*.test.ts"
   },
   "keywords": [],
   "author": {
