--- a/bridge/package.json
+++ b/bridge/package.json
@@ -126,6 +126,7 @@
     "electron-squirrel-startup": "^1.0.0",
     "electron-store": "^8.0.1",
     "file-loader": "^6.2.0",
+    "globby": "^13.1.3",
     "isomorphic-git": "^1.21.0",
     "loglevel": "^1.8.1",
     "mocha": "^10.1.0",
