--- a/bridge/package.json
+++ b/bridge/package.json
@@ -116,6 +116,7 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@mui/material": "^5.2.3",
+    "@octokit/core": "^4.1.0",
     "@types/chai": "^4.3.4",
     "@types/mocha": "^10.0.0",
     "ace-builds": "^1.4.13",
