--- a/bridge/package.json
+++ b/bridge/package.json
@@ -129,6 +129,7 @@
     "file-loader": "^6.2.0",
     "globby": "^13.1.3",
     "isomorphic-git": "^1.21.0",
+    "lodash": "^4.17.21",
     "loglevel": "^1.8.1",
     "mocha": "^10.1.0",
     "ncp": "^2.0.0",
