--- a/bridge/package.json
+++ b/bridge/package.json
@@ -118,6 +118,7 @@
     "@mui/material": "^5.2.3",
     "@octokit/core": "^4.1.0",
     "@types/chai": "^4.3.4",
+    "@types/lodash": "^4.14.191",
     "@types/mocha": "^10.0.0",
     "ace-builds": "^1.4.13",
     "autoprefixer": "^10.4.0",
